# cpf

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cpf/: __init__.py  abbreviations.py  ast_nodes.py  cli.py  decoder.py  encoder.py  formatter.py  parser.py  patterns.py  spec.py  tokenizer.py  utils.py  validator.py
examples/: persona.cpf
tests/: conftest.py  test_abbreviations.py  test_cli.py  test_decoder.py  test_encoder.py  test_parser.py  test_roundtrip.py  test_validator.py
